package eapli.board.shared;

/**
 * ClientEncoder
 *
 * @param <T> dto object class
 */
public interface SBClientSideEncoder<T> extends SBEncoder<T, T> {

}
